--- a/index.qmd
+++ b/index.qmd
@@ -4,18 +4,25 @@ navbar: false
 format:
   html:
     theme: ["default", "index.scss"]
-    backgroundcolor: "#45b2c6"
 ---
 
 ::: {.grid}
 
-::: {.g-col-6 .align-middle}
-![](./images/icon.jpg){width=30% fig-align="center"}
+::: {.g-col-2}
+
 :::
 
-::: {.g-col-6 .align-middle}
-* [About](./about.qmd)
-* [GitHub](https://github.com/yutannihilation/)
-* [Blog](https://yutani.rbind.io/)
-* [ブログ（日本語）](https://notchained.hatenablog.com/)
+::: {.g-col-4}
+![](./images/icon.jpg){width=40% fig-align="center"}
+:::
+
+::: {.g-col-4}
+* [about](./about.qmd)
+* [github](https://github.com/yutannihilation/)
+* [blog (en)](https://yutani.rbind.io/)
+* [blog (ja)](https://notchained.hatenablog.com/)
+:::
+
+::: {.g-col-2}
+
 :::
