--- a/about.qmd
+++ b/about.qmd
@@ -19,6 +19,7 @@ format:
 
 * 2012/4～2018/3　サイボウズ株式会社: SRE。
 * 2018/3～2024/7　LINE ヤフー株式会社: ソフトウェアエンジニア、データサイエンティスト。チームのマネージャーも経験。
+* 2025/2～現在  　株式会社 MIERUNE: GIS エンジニア。
 
 ## Hard Skills
 
